modified xmlcommentremover